syntax = "proto3";

package sniper.game.domain;

option java_outer_classname = "SniperGameDomain";

message LeaderBoardState {
  repeated PlayerDetails scores = 1;
}

message PlayerDetails {
  string player_id = 1;
  string player_name = 2;
  string player_score = 3;
}
message PlayerAdded {
  PlayerDetails player = 1;
}

message PlayerScored {
  string player_id = 1;
}